client review section added

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h2 class="text-4xl font-extrabold text-center mb-6">
                 The Legal Practice Area
             </h2>
-            <p class="poppins max-w-3xl mx-auto mb-16">
+            <p class="poppins max-w-3xl mx-auto mb-16 text-center">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                 alteration in some form, by injected humour.
             </p>
@@ -134,7 +134,8 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title text-2xl font-extrabold mb-6">Business Law</h2>
-                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem Ipsum available, but the majority
+                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem
+                            Ipsum available, but the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions">
                             <button class="text-yellow-800 "><i
@@ -148,7 +149,8 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title text-2xl font-extrabold mb-6">Criminal Law</h2>
-                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem Ipsum available, but the majority
+                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem
+                            Ipsum available, but the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions">
                             <button class="text-yellow-800 "><i
@@ -162,7 +164,8 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title text-2xl font-extrabold mb-6">Child Support</h2>
-                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem Ipsum available, but the majority
+                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem
+                            Ipsum available, but the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions">
                             <button class="text-yellow-800 "><i
@@ -176,7 +179,8 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title text-2xl font-extrabold mb-6">Education Law</h2>
-                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem Ipsum available, but the majority
+                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem
+                            Ipsum available, but the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions">
                             <button class="text-yellow-800 "><i
@@ -190,7 +194,8 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title text-2xl font-extrabold mb-6">Divorce Law</h2>
-                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem Ipsum available, but the majority
+                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem
+                            Ipsum available, but the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions">
                             <button class="text-yellow-800 "><i
@@ -204,7 +209,8 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title text-2xl font-extrabold mb-6">Tax Law</h2>
-                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem Ipsum available, but the majority
+                        <p class="mb-8 poppins w-64 text-yellow-800">There are many variations of passages of Lorem
+                            Ipsum available, but the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="card-actions">
                             <button class="text-yellow-800 "><i
@@ -214,6 +220,72 @@
                 </div>
             </div>
         </section>
+
+        <!-- Client Review -->
+        <section class="client-review">
+            <h2 class="text-4xl font-extrabold text-center mb-6">What Our Client Say</h2>
+            <p class="poppins max-w-3xl mx-auto mb-16 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="./images/slider-1.jpg" class="w-full h-[500px]" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-60">
+                        <a href="#slide3" class="btn">❮</a>
+                        <div class=" text-center">
+                            <div class="flex flex-col justify-center">
+                                <img src="./images/client.jpeg" alt="" class="rounded-full w-20 mx-auto mb-6">
+                                <h1 class="text-2xl font-bold text-white">UIX Designer</h1>
+                                <p class="poppins text-white mb-8">UIX Designer</p>
+                                <p class=" poppins text-white">Contrary to popular belief, Lorem Ipsum is not simply
+                                    random text. It has roots in a piece of classical Latin literature from 45 BC,
+                                    making it over 2000 years old. Richard Mc Clintock, a Latin professor at
+                                    Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                                    consectetur.</p>
+                            </div>
+                        </div>
+                        <a href="#slide2" class="btn">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="./images/slider-2.jpg" class="w-full h-[500px]" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-60">
+                        <a href="#slide1" class="btn">❮</a>
+                        <div class=" text-center">
+                            <div class="flex flex-col justify-center">
+                                <img src="./images/client.jpeg" alt="" class="rounded-full w-20 mx-auto mb-6">
+                                <h1 class="text-2xl font-bold text-white">UIX Designer</h1>
+                                <p class="poppins text-white mb-8">UIX Designer</p>
+                                <p class=" poppins text-white">Contrary to popular belief, Lorem Ipsum is not simply
+                                    random text. It has roots in a piece of classical Latin literature from 45 BC,
+                                    making it over 2000 years old. Richard Mc Clintock, a Latin professor at
+                                    Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                                    consectetur.</p>
+                            </div>
+                        </div>
+                        <a href="#slide3" class="btn">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="./images/slider-3.jpg" class="w-full h-[500px]" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-60">
+                        <a href="#slide2" class="btn">❮</a>
+                        <div class=" text-center">
+                            <div class="flex flex-col justify-center">
+                                <img src="./images/client.jpeg" alt="" class="rounded-full w-20 mx-auto mb-6">
+                                <h1 class="text-2xl font-bold text-white">UIX Designer</h1>
+                                <p class="poppins text-white mb-8">UIX Designer</p>
+                                <p class=" poppins text-white">Contrary to popular belief, Lorem Ipsum is not simply
+                                    random text. It has roots in a piece of classical Latin literature from 45 BC,
+                                    making it over 2000 years old. Richard Mc Clintock, a Latin professor at
+                                    Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                                    consectetur.</p>
+                            </div>
+                        </div>
+                        <a href="#slide1" class="btn">❯</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!--/////////////////////////////////// main section ///////////////////////////////////-->
 
