--- a/index.html
+++ b/index.html
@@ -286,6 +286,55 @@
             </div>
         </section>
 
+        <!-- Frequently Asked section -->
+        <section class="frequently-asked">
+            <h2 class="text-4xl font-extrabold text-center mb-6">
+                Frequently Asked Any Questions
+            </h2>
+            <p class="poppins max-w-3xl mx-auto mb-16 text-center">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+            </p>
+            <div class="flex flex-col md:flex-row items-center">
+                <div class="collapse-container">
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200 my-7">
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,.</p>
+                        </div>
+                      </div>
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200 my-7">
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,.</p>
+                        </div>
+                      </div>
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200 my-7">
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,.</p>
+                        </div>
+                      </div>
+                    <div tabindex="0" class="collapse collapse-plus border border-base-300 bg-base-200 my-7">
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="question-img">
+                    <img src="./images/faq.png" alt="">
+                </div>
+            </div>
+        </section>
+
     </main>
     <!--/////////////////////////////////// main section ///////////////////////////////////-->
 
